# gpu-efficiency-streaming

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  VERIFICATION-MANIFEST.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
case-studies/granite-3.3-8b-l4/: README.md  analysis.ipynb  plot.py  plot_comparison.py  recompute_frontier.py
case-studies/granite-3.3-8b-l4/data/: gpu_telemetry_raw_sample.jsonl  sweep_results.csv  sweep_results_modelb.csv
case-studies/granite-3.3-8b-l4/evidence/: remediation-sample.txt  schema-registry-subjects.txt  (+2 more)
examples/: sample-output.md
experimental/: README.md
experimental/flink/: 06a_gemini_connection.sql  06b_gemini_model.sql  06c_remediation.sql  08_events.sql
flink/: 01a_add_event_time.sql  01b_set_watermark.sql  02_detect_anomalies.sql  03_alerts.sql  04_datadog_metrics.sql  05_forecast.sql  06c_remediation.sql  07_capacity_risk.sql  08_events.sql  08_waste_high_util.sql  09_remediation.sql  README.md
pipeline/: PIPELINE.md
research/: METHODOLOGY.md  metrics_cross_check.ipynb
schemas/: gpu_telemetry.avsc
scripts/: datagen_schema.json
src/gpu_efficiency_streaming/: __init__.py  bridge.py  deploy.py  destroy.py  produce.py
terraform/: connectors.tf  flink.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
tests/: test_bridge.py  test_datagen_schema.py  test_producer.py  test_schema.py
