[project]
name = "gpu-efficiency-streaming"
version = "0.3.0"
description = "Real-time GPU inference efficiency anomaly detection on Confluent Cloud (Flink + built-in ML)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Lutflow" }]
keywords = ["kafka", "flink", "confluent", "gpu", "llm-inference", "anomaly-detection", "finops", "opentelemetry"]
dependencies = ["confluent-kafka[avro,schemaregistry]>=2.5", "certifi>=2024.0"]

[project.optional-dependencies]
dev = []
analysis = ["pandas>=2.0", "matplotlib>=3.7", "jupyter>=1.0", "nbconvert>=7.0"]

[project.scripts]
deploy = "gpu_efficiency_streaming.deploy:main"
destroy = "gpu_efficiency_streaming.destroy:main"
produce = "gpu_efficiency_streaming.produce:main"
bridge = "gpu_efficiency_streaming.bridge:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gpu_efficiency_streaming"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "fastavro>=1.9",
  "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
